s3-test/src/main/java/eu/openg/aws/s3/test/error/ShouldHaveETag.java
/*
 * Copyright 2015 OpenG (Atvira Karta, LLC)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package eu.openg.aws.s3.test.error;

import org.assertj.core.error.BasicErrorMessageFactory;
import org.assertj.core.error.ErrorMessageFactory;

public class ShouldHaveETag extends BasicErrorMessageFactory {

    private static final ShouldHaveETag INSTANCE = new ShouldHaveETag();

    public static ErrorMessageFactory shouldHaveETag() {
        return INSTANCE;
    }

    private ShouldHaveETag() {
        super("%nExpecting ETag not to be null");
    }
}
